# moz-latest-release

./: CHANGELOG.md  Cargo.toml  README.md  wrangler.toml
docs/: index.html  source.html
src/: lib.rs  version.rs
