[package]
name = "moz-latest-release"
version = "0.1.0"
authors = ["trickypr"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "0.1"
worker = "0.0.18"
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }


# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

[profile.release]
lto = true
strip = true
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "s"
